# tobii-grpc-server

./: README.md  config.yaml  pyproject.toml  requirements.txt  tobii_remote.proto
example/: tobii_remote_server.py
sample/: tobii_remote_client.py  tobii_remote_server.py
tobii_remote/: __init__.py  tobii_remote_client.py  tobii_remote_pb2.py  tobii_remote_pb2.pyi  tobii_remote_pb2_grpc.py  tobii_remote_server.py
tobii_remote/tracker/: __init__.py  dummy.py  tracker.py
